--- a/static/global.css
+++ b/static/global.css
@@ -1,3 +1,7 @@
+body {
+    background-color: SlateGrey;
+}
+
 .divTable
 {
     display: table;
@@ -6,6 +10,17 @@
     border:1px solid  #666666;
     border-spacing:5px;
     margin-top: 1em;
+}
+
+.header {
+    display: block;
+    clear: both;
+    vertical-align: middle;
+}
+
+.thumbnail {
+    border: 3px solid black;
+    float:left;
 }
 
 .row
