--- a/static/global.css
+++ b/static/global.css
@@ -6,21 +6,39 @@ body {
 {
     display: table;
     width:auto;
-    background-color:#eee;
-    border:1px solid  #666666;
+    background-color:SlateGrey;
+    border:1px solid #666666;
     border-spacing:5px;
     margin-top: 1em;
+    clear: both;
+    margin-left: 1em;
+
 }
 
-.header {
-    display: block;
-    clear: both;
+img.header {
+    float: left;
+    vertical-align: middle;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-right: 1em;
+    margin-left: 1em;
+}
+
+.titletext {
+    padding-top: .75em;
+    font-weight: bold;
+    font-size: xx-large;
+    vertical-align: middle;
+}
+
+.subtitle {
+    font-size: large;
     vertical-align: middle;
 }
 
 .thumbnail {
-    border: 3px solid black;
-    float:left;
+    border: 1px;
+    vertical-align: middle;
 }
 
 .row
@@ -38,5 +56,5 @@ body {
     float:left;/*fix for  buggy browsers*/
     display:table-column;
     width:350px;
-    background-color:#ddd;
+    background-color:DarkGray;
 }
